--- a/src/components/template.html
+++ b/src/components/template.html
@@ -32,9 +32,12 @@
           name="fade"
         >
           <img 
-            :key="images[select].url"
-            :src="images[select].url"
+            :key="images[select].src"
+            :src="images[select].src"
             :srcset="images[select].srcset || ''"
+            :data-src="images[select].src"
+            lazy="loading"
+            v-lazy="images[select].src"
             class="vue-lb-modal-image"
           >
         </transition>
